# fastapi-server-template

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
configs/: config.toml
src/: app.py
src/server/: server.py
src/utils/: config.py  exceptions.py  logger.py  models.py
